Created a camera script to follow the character in third person, along with testing out various free mixamo animations and coursework. I've seperated my scripts folders according to whether they come from the course or myself (which in this case,  based my camera scripts from other online resources).

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Assets/Voxel Turrets.meta
 Assets/Santa Claus Is Coming to Town.meta
 Assets/Standard Assets.meta
 Assets/PostProcessing.meta
+Assets/Player/Player 1.prefab
+Assets/Player/Player 1.prefab.meta
